# riscv-pipeline-simulator

./: .gitignore  CMakeLists.txt
include/asm/: parser.hpp
include/decode/decoder/: decodedInst.hpp
include/decode/regfile/: regfile.hpp
include/fetch/: instMemory.hpp  instrMemory.hpp
include/isa/: decodedInst.hpp  decoder.hpp  decoderresult.hpp
include/memory/: iccm.hpp
include/parser/: RISCParser.hpp
include/pipeline/: fetch.hpp  hazardunit.hpp  pipelinecontrol.hpp  pipelinesignals.hpp  pipereg.hpp  stage.hpp  stallunit.hpp
include/sim/: RISCop.hpp  clock.hpp  instConstructor.hpp  instTranslator.hpp  opcodeDict.hpp  simulator.hpp
include/types/: controlsignals.hpp  reg.hpp
include/utils/: utils.hpp
input/: test.txt
src/: main.cpp  proc.cpp
src/core/: proc.cpp  regfile.cpp
src/core/pipeline/decode/: decoder.cpp
src/core/pipeline/fetch/: instrMemory.cpp
src/fetch/: instMemory.cpp  instrMemory.cpp
src/isa/: decoder.cpp
src/memory/: iccm.cpp
src/parser/: parser.cpp
src/pipeline/: decoder.cpp  fetch.cpp  hazardunit.cpp  iccm.cpp  pipelinesignals.cpp
src/sim/: RISCop.cpp  instConstructor.cpp  instTranslator.cpp
src/utils/: utils.cpp
